--- a/templates/f4fitness/index.html
+++ b/templates/f4fitness/index.html
@@ -132,6 +132,7 @@
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-6">
+                    {% comment %} dddddd  {% endcomment %}
                     <div class="single-topic text-center mb-30">
                         <div class="topic-img">
                             <img src={% static "img/gallery/cat2.png"%} alt="">
