edit user and trainer

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -16,6 +16,7 @@
                 <li><a href="#">Dashboard</a></li>
                 <li><a href="{% url 'trainer_managment' %}">Trainer</a></li>
                 <li><a href="{% url 'user_management' %}">Users</a></li>
+                <li><a href="{% url 'plan_management' %}">plans</a></li>
                 <li><a href="#">Reports</a></li>
                 <li><a href="#">Settings</a></li>
                 <li><a href="#">Logout</a></li>
