--- a/templates/f4fitness/register.html
+++ b/templates/f4fitness/register.html
@@ -135,7 +135,7 @@
                 <label for="image">Profile Picture</label>
                 <input type="file" id="image" name="image" accept="image/*">
 
-                <button type="submit">Register</button>
+                <a href=""><button  type="submit">Register</button></a>
             </form>
             <p>Already have an account? <a href="/login">Login here</a>.</p>
         </div>
