--- a/templates/f4fitness/user_management.html
+++ b/templates/f4fitness/user_management.html
@@ -128,8 +128,8 @@
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
                     <td>
-                        <a href="{% url 'edit_user' user.id %}" class="btn">Edit</a>
-                        <a href="{% url 'delete_user' user.id %}" class="btn btn-delete">Delete</a>
+                        <a href="{% url 'edit_user' user.user.id %}" class="btn">Edit</a>
+                        <a href="{% url 'delete_user' user.user.id %}" class="btn btn-delete">Delete</a>
                     </td>
                 </tr>
                 {% empty %}
