--- a/templates/f4fitness/login.html
+++ b/templates/f4fitness/login.html
@@ -9,7 +9,7 @@
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
-            background-image: url('{% static "img/blog/fit1.png" %}'); /* Add your background image URL here */
+            background-image: url('{% static "img/blog/samurai.jpg" %}'); /* Add your background image URL here */
             background-size: cover;
             background-position: center;
             margin: 0;
@@ -103,7 +103,7 @@
             </div>
 
             <button type="submit">Login</button>
-            <p>Dont have account <a href="/register">Register here</a>.</p>
+            <p>Dont have account <a href="/uplan">Register here</a>.</p>
 
 
             {% if messages %}
