--- a/templates/f4fitness/register.html
+++ b/templates/f4fitness/register.html
@@ -8,7 +8,7 @@
     <title>User Registration</title>
     <style>
         body {
-            background-image: url('{% static "img/blog/fit1.png" %}'); /* Add your background image URL here */
+            background-image: url('{% static "img/blog/samurai.jpg" %}'); /* Add your background image URL here */
             
             background-size: cover;
             background-position: center;
