--- a/templates/f4fitness/edit_plans.html
+++ b/templates/f4fitness/edit_plans.html
@@ -74,6 +74,15 @@
         <form method="post" action="">
             {% csrf_token %}
             <div>
+                <label for="options">Course Type:</label>
+                <select id="options" name="Type" required>
+                    <option value="" disabled selected>Select an option</option>
+                    <option value="Online">Online</option>
+                    <option value="Offline">Offline </option>
+                </select>
+            </div>
+            
+            <div>
                 <label for="Name">Name</label>
                 <input type="text" id="Name" value="{{ plan.Name }}" name="Name" placeholder="Enter name" required>
             </div>
