--- a/templates/f4fitness/edit_user.html
+++ b/templates/f4fitness/edit_user.html
@@ -112,30 +112,25 @@
                 {% csrf_token %}
                 
                 <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+                <input type="text" id="name" value="{{ user_profile.name }}" name="name" placeholder="Enter your full name" required>
 
                 <label for="username">Username</label>
-                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+                <input type="text" id="username" value="{{ user_profile.user }}" name="username" placeholder="Enter your username" required>
 
-                <label for="password">Password</label>
-                <div class="input-container">
-                    <input type="password" id="password" name="password" placeholder="Enter your password" required>
-                    <span class="eye-icon" onclick="togglePassword()">&#128065;</span>
-                </div>
-
+               
                 <label for="dob">Date of Birth</label>
-                <input type="date" id="dob" name="dob" required>
+                <input type="date" id="dob" value="{{ user_profile.dob }}" name="dob" required>
 
                 <label for="address">Address</label>
-                <textarea id="address" name="address" placeholder="Enter your address" rows="3" required></textarea>
+                <textarea id="address" value="{{ user_profile.address }}" name="address" placeholder="Enter your address" rows="3" required></textarea>
 
                 <label for="phone_number">Phone Number</label>
-                <input type="tel" id="phone_number" name="phone_number" placeholder="Enter your phone number" required>
+                <input type="tel" value="{{ user_profile.phone_number }}" id="phone_number" name="phone_number" placeholder="Enter your phone number" required>
 
-                <label for="image">Profile Picture</label>
-                <input type="file" id="image" name="image" accept="image/*">
+                {% comment %} <label for="image">Profile Picture</label> {% endcomment %}
+                {% comment %} <input type="file" id="image" value="{{ user_profile.image }}" name="image" accept="image/*"> {% endcomment %}
 
-                <a href=""><button  type="submit">Update</button></a>
+                <a href="/users"><button  type="submit">Update</button></a>
             </form>
             
         </div>
