--- a/templates/f4fitness/index.html
+++ b/templates/f4fitness/index.html
@@ -61,7 +61,7 @@
                                 <ul id="navigation">
                                     <li><a href="{% url 'home' %}">Home</a></li>
                                     <li><a href=" about.html">About</a></li>
-                                    <li><a href="courses.html">Courses</a></li>
+                                    {% comment %} <li><a href="{% url  'uplan' %}">Courses</a></li> {% endcomment %}
                                     <li><a href="pricing.html">Pricing</a></li>
                                     <li><a href="gallery.html">Gallery</a></li>
                                     <li><a href="blog.html">Blog</a>
@@ -73,7 +73,7 @@
                                     </li>
                                     {% comment %} <li><a href="admin_login">ADMIN</a></li> {% endcomment %}
                                     <li><a href="trainer_register">TRAINER</a></li>
-                                    <li><a href="{% url  'register' %}">REGISTRATION</a></li>
+                                    <li><a href="{% url  'uplan' %}">REGISTRATION</a></li>
                                 </ul>
                             </nav>
                         </div>          
@@ -463,12 +463,14 @@
                 <div class="section-tittle2 mb-20 wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                     <div class="front-text">
                         <h2 class="">About us</h2>
-                        <p>You’ll look at graphs and charts in Task One, how to approach the task and the language needed 
-                            for a successful answer. You’ll examine Task Two questions and learn how to plan, write and 
-                        check academic essays.</p>
-                        <p class="mb-40">Task One, how to approach the task and the language needed for a successful answer. You’ll 
-                        examine Task Two questions and learn how to plan, write and check academic essays.</p>
-                        <a href="courses.html" class="border-btn">My Courses</a>
+                        <p>Welcome to F4FITNESS, where fitness is a way of life. 
+                             Since we've created a space for people of all fitness levels to feel supported and motivated.
+                             With modern equipment, expert trainers, and personalized programs, we help you build strength,
+                             improve endurance, and embrace a healthier lifestyle. Our offerings include group classes, personal training, 
+                             and a welcoming environment that fosters dedication and community. At F4FITNESS, we’re about transforming lives
+                             and helping you achieve your full potential. Join us and take the first step toward a stronger, healthier, and more confident you!
+                         </p>
+                        <a href="courses.html" class="border-btn"> Courses</a>
                     </div>
                 </div>
             </div>
