--- a/templates/f4fitness/plan_management.html
+++ b/templates/f4fitness/plan_management.html
@@ -109,6 +109,7 @@
         <div class="card">
             <div class="card-content">
                 <h2 class="card-title">{{ plan.Name }}</h2>
+                <p class="card-details">Type: {{ plan.Type }}</p>
                 <p class="card-details">DURATION: {{ plan.time_period }}</p>
                 <p class="card-details">FEE: {{ plan.price }}</p>
                 <p class="card-details">DESCRIPTION: {{ plan.descrption }}</p>
