--- a/templates/trainer.html
+++ b/templates/trainer.html
@@ -114,7 +114,7 @@
         <div class="card">
             <div class="card-content">
                 <h2 class="card-title">{{ trainer.name }}</h2>
-                <p class="card-details">Specialization: {{ trainer.specialization }}</p>
+                {% comment %} <p class="card-details">DETAILS: {{ trainer. }}</p> {% endcomment %}
             </div>
             <div class="card-buttons">
                 <a href="{% url 'edit_trainer_details' trainer.id %}" class="edit-btn btn"  >Edit</a>
