--- a/templates/f4fitness/addplans.html
+++ b/templates/f4fitness/addplans.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     {% load static %}
@@ -78,7 +78,8 @@
                 <select id="options" name="Type" required>
                     <option value="" disabled selected>Select an option</option>
                     <option value="Online">Online</option>
-                    <option value="Offline">Offline </option>
+                    <option value="Offline
+                    ">Offline </option>
                 </select>
             </div>
             
@@ -102,4 +103,37 @@
         </form>
     </div>
 </body>
-</html>
+</html> 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
