--- a/templates/f4fitness/index.html
+++ b/templates/f4fitness/index.html
@@ -60,10 +60,10 @@
                             <nav>
                                 <ul id="navigation">
                                     <li><a href="{% url 'home' %}">Home</a></li>
-                                    <li><a href=" about.html">About</a></li>
+                                    <li><a href="{% url 'about' %}">About</a></li>
                                     {% comment %} <li><a href="{% url  'uplan' %}">Courses</a></li> {% endcomment %}
                                     <li><a href="pricing.html">Pricing</a></li>
-                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="">Products</a></li>
                                     <li><a href="blog.html">Blog</a>
                                         <ul class="submenu">
                                             <li><a href="blog.html">Blog</a></li>
