--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -17,9 +17,9 @@
                 <li><a href="{% url 'trainer_managment' %}">Trainer</a></li>
                 <li><a href="{% url 'user_management' %}">Users</a></li>
                 <li><a href="{% url 'plan_management' %}">plans</a></li>
-                <li><a href="#">Reports</a></li>
+                <li><a href="{% url 'productmanagement' %}">Products</a></li>
                 <li><a href="#">Settings</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="">Logout</a></li>
             </ul>
         </div>
 
