--- a/templates/userbase.html
+++ b/templates/userbase.html
@@ -117,6 +117,7 @@
     <div class="dashboard-container">
         <div class="sidebar">
             <h2>User Menu</h2>
+            {% if False %}
             <ul>
                 <li><a href="{% url 'user_profile' %}">My Profile</a></li>
                 <li><a href="">Workout Plan</a></li>
@@ -126,6 +127,7 @@
                 <li><a href="{% url 'chatbot' %}">Chat Bot</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
+            {% endif %}
         </div>
 
         <div class="main-content">
