--- a/templates/userbase.html
+++ b/templates/userbase.html
@@ -122,6 +122,7 @@
                 <li><a href="{% url 'user_profile' %}">My Profile</a></li>
                 <li><a href="">Workout Plan</a></li>
                 <li><a href="#">Diet Plan</a></li>
+                <li><a href="">products</a></li>
                 <li><a href="{% url 'user_progress' %}">Progress Tracker</a></li>
                 <li><a href="#">Upcoming Classes</a></li>
                 <li><a href="{% url 'chatbot' %}">Chat Bot</a></li>
