--- a/templates/f4fitness/index.html
+++ b/templates/f4fitness/index.html
@@ -72,7 +72,8 @@
                                         </ul>
                                     </li> {% endcomment %}
                                     {% comment %} <li><a href="admin_login">ADMIN</a></li> {% endcomment %}
-                                    {% comment %} <li><a href="trainer_register">TRAINER</a></li> {% endcomment %}
+                                
+                                    <li><a href="trainer_login">TRAINER</a></li>
                                     <li><a href="{% url  'uplan' %}">REGISTRATION</a></li>
                                 </ul>
                             </nav>
