--- a/templates/f4fitness/user_dashboard.html
+++ b/templates/f4fitness/user_dashboard.html
@@ -18,7 +18,7 @@
         </div>
 
         <div class="card">
-            <h3>Upcoming Classes</h3>
+            <h3>Attend Class</h3>
             {% if upcoming_classes %}
                 <ul>
                     {% for class in upcoming_classes %}
