--- a/templates/userbase.html
+++ b/templates/userbase.html
@@ -36,7 +36,7 @@
             width: 250px;
             background-color: #333;
             padding: 20px;
-            height: 100vh;
+            min-height: 100vh;
             color: white;
             flex-shrink: 0;
         }
@@ -82,6 +82,7 @@
             border-radius: 10px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
             margin-bottom: 20px;
+
         }
 
         .card h3 {
@@ -117,14 +118,16 @@
     <div class="dashboard-container">
         <div class="sidebar">
             <h2>User Menu</h2>
-            {% if user_data.paid %}
+            {% if request.user.is_authenticated and request.user.userprofile.paid %}
             <ul>
                 <li><a href="{% url 'user_profile' %}">My Profile</a></li>
                 <li><a href="">Workout Plan</a></li>
-                <li><a href="#">Diet Plan</a></li>
-                <li><a href="">products</a></li>
+                <li><a href="{% url 'user_diet_plan' %}">Diet Plan</a></li>
+                <li><a href="{% url 'user_products' %}">products</a></li>
+                <li><a href="{% url 'cart_view' %}">My Cart</a></li>
+                <li><a href="{% url 'order_history' %}">Orders</a></li>
                 <li><a href="{% url 'user_progress' %}">Progress Tracker</a></li>
-                <li><a href="#">Upcoming Classes</a></li>
+                <li><a href="{% url 'user_sessions' %}">Upcoming Classes</a></li>
                 <li><a href="{% url 'chatbot' %}">Chat Bot</a></li>
                 <li><a href="{% url 'logout' %}">Logout</a></li>
             </ul>
